ctor/tests/errors/ctor_bad_crate_path.rs
use ctor::ctor;

#[ctor(crate_path = ::whatever)]
fn foo() {
}

fn main() {
}
